--- a/SW_Add_IN/SW_Add_IN.csproj
+++ b/SW_Add_IN/SW_Add_IN.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SW_Add_IN</RootNamespace>
     <AssemblyName>SW_Add_IN</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -38,15 +38,15 @@
       <HintPath>..\..\AddFeatureContextMenu\ControlsLibrary\bin\Debug\ServiceConstants.dll</HintPath>
     </Reference>
     <Reference Include="SolidWorks.Interop.sldworks">
-      <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\api\redist\SolidWorks.Interop.sldworks.dll</HintPath>
+      <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\SolidWorks.Interop.sldworks.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swconst">
-      <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\api\redist\SolidWorks.Interop.swconst.dll</HintPath>
+      <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\SolidWorks.Interop.swconst.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="SolidWorks.Interop.swpublished">
-      <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\api\redist\SolidWorks.Interop.swpublished.dll</HintPath>
+      <HintPath>C:\Program Files\SOLIDWORKS Corp\SOLIDWORKS\SolidWorks.Interop.swpublished.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
@@ -103,10 +103,6 @@
     <None Include="Resources\THeme.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\AddFeatureContextMenu\ControlsLibrary\ControlsLibrary.csproj">
-      <Project>{e418a164-4383-42c8-b35b-82f995f96989}</Project>
-      <Name>ControlsLibrary</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\To_REMAKE\PdmWebService\DataBaseDomian\DataBaseDomian.csproj">
       <Project>{6ac06b1c-66f2-40e5-9b11-cbfa56b747b6}</Project>
       <Name>DataBaseDomian</Name>
@@ -118,6 +114,10 @@
     <ProjectReference Include="..\..\To_REMAKE\PdmWebService\SolidWorksLibrary\SolidWorksLibrary.csproj">
       <Project>{decc61e0-8d25-485f-99f4-d895177c7997}</Project>
       <Name>SolidWorksLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ControlsLibraryPorSolid\ControlsLibrary.csproj">
+      <Project>{e418a164-4383-42c8-b35b-82f995f96989}</Project>
+      <Name>ControlsLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
